WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104819
[GTK][AC][Clutter] The non-composited content is not painted
https://bugs.webkit.org/show_bug.cgi?id=104819
Summary
[GTK][AC][Clutter] The non-composited content is not painted
Joone Hur
Reported
2012-12-12 09:01:38 PST
When Accelerated Compositing is enabled, GraphicsLayers are only painted.
Attachments
Patch
(10.76 KB, patch)
2012-12-12 09:51 PST
,
Joone Hur
no flags
Details
Formatted Diff
Diff
Patch
(10.76 KB, patch)
2012-12-12 10:27 PST
,
Joone Hur
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joone Hur
Comment 1
2012-12-12 09:51:27 PST
Created
attachment 179071
[details]
Patch
Gustavo Noronha (kov)
Comment 2
2012-12-12 10:14:49 PST
Comment on
attachment 179071
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=179071&action=review
> Source/WebKit/gtk/ChangeLog:8 > + When Accelerated Compositing is enabled, GraphicsLayers are only painted.
"only GraphicsLayers are painted"
> Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContext.h:80 > - WebCore::GraphicsLayer* m_rootGraphicsLayer; > GtkWidget* m_rootLayerEmbedder; > + OwnPtr<WebCore::GraphicsLayer> m_rootLayer; > + OwnPtr<WebCore::GraphicsLayer> m_nonCompositedContentLayer;
I'd like to take this m_rootLayer declaration out of the if/elifs if possible, since all implementations use this. But this can be done in another patch and we can grab feedback from mrobinson for that, too.
Joone Hur
Comment 3
2012-12-12 10:27:24 PST
Created
attachment 179077
[details]
Patch
WebKit Review Bot
Comment 4
2012-12-12 10:45:29 PST
Comment on
attachment 179077
[details]
Patch Clearing flags on attachment: 179077 Committed
r137483
: <
http://trac.webkit.org/changeset/137483
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug