Source/WebKit/gtk/WebCoreSupport/AcceleratedCompositingContext.h
@@ -75,8 +75,10 @@ private:
     unsigned int m_layerFlushTimerCallbackId;
 
 #if USE(CLUTTER)
-    WebCore::GraphicsLayer* m_rootGraphicsLayer;
     GtkWidget* m_rootLayerEmbedder;
+    OwnPtr<WebCore::GraphicsLayer> m_rootLayer;
+    OwnPtr<WebCore::GraphicsLayer> m_nonCompositedContentLayer;
+
     static gboolean layerFlushTimerFiredCallback(AcceleratedCompositingContext*);
 #elif USE(TEXTURE_MAPPER_GL)
     OwnPtr<WebCore::RedirectedXCompositeWindow> m_redirectedWindow;
